--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,68 +1,211 @@
-aniso8601==9.0.1
-attrs==21.2.0
-cached-property==1.5.2
-certifi==2021.5.30
-cffi==1.14.5
+aio-pika==6.6.0
+aiofiles==0.5.0
+aiohttp==3.4.4
+aiormq==3.2.2
+anyio==2.0.2
+apt-xapian-index==0.47
+argon2-cffi==20.1.0
+asn1crypto==0.24.0
+astroid==2.3.3
+async-generator==1.10
+async-timeout==3.0.1
+asyncmock==0.4.2
+attrs==20.3.0
+Babel==2.9.0
+backcall==0.2.0
+bleach==3.2.2
+bokeh==1.4.0
+certifi==2020.12.5
+cffi==1.14.4
 chardet==4.0.0
-click==8.0.1
-cryptography==3.4.7
-dill==0.3.3
-dlx==1.0.4
-docplex==2.20.204
-fastdtw==0.3.4
-fastjsonschema==2.15.1
-Flask==2.0.1
-Flask-RESTful==0.3.9
-h5py==3.1.0
+click==7.1.1
+cloudpickle==1.3.0
+coincurve==13.0.0
+colorama==0.3.7
+colorcet==2.0.2
+command-not-found==0.3
+contextvars==2.4
+cryptography==2.1.4
+cupshelpers==1.0
+cycler==0.10.0
+cytoolz==0.10.1
+dask==2.12.0
+dataclasses==0.8
+datashader==0.10.0
+datashape==0.5.2
+decorator==4.4.2
+defusedxml==0.6.0
+distributed==2.12.0
+distro-info===0.18ubuntu0.18.04.1
+earlgrey==0.1.0
+entrypoints==0.3
+eth-hash==0.2.0
+eth-keyfile==0.5.1
+eth-keys==0.3.3
+eth-typing==2.2.1
+eth-utils==1.9.0
+fsspec==0.6.3
+funcsigs==1.0.2
+future==0.16.0
+grpcio==1.25.0
+grpcio-tools==1.25.0
+gunicorn==19.9.0
+HeapDict==1.0.1
+holoviews==1.12.7
+httplib2==0.9.2
+httptools==0.1.1
+iconcommons==1.1.3
+iconrpcserver==1.4.9
+iconsdk==1.3.2
+iconservice==1.6.1
 idna==2.10
-importlib-metadata==4.4.0
-inflection==0.5.1
-iniconfig==1.1.1
-itsdangerous==2.0.1
-Jinja2==3.0.1
-joblib==1.0.1
+idna-ssl==1.1.0
+imageio==2.8.0
+immutables==0.14
+importlib-metadata==3.4.0
+ipykernel==5.4.3
+ipympl==0.4.1
+ipython==7.16.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+iso3166==1.0.1
+isort==4.3.21
+jedi==0.18.0
+Jinja2==2.11.2
+joblib==0.14.1
+json5==0.9.5
+jsonrpcclient==2.6.0
+jsonrpcserver==3.5.6
 jsonschema==3.2.0
-lxml==4.6.3
-MarkupSafe==2.0.1
-more-itertools==8.8.0
-mpmath==1.2.1
-multitasking==0.0.9
-nest-asyncio==1.5.1
-ntlm-auth==1.5.0
-numpy==1.20.1
-packaging==20.9
-pandas==1.2.3
+jupyter-client==6.1.11
+jupyter-core==4.7.0
+jupyter-server==1.2.2
+jupyterlab==3.0.5
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.1.2
+keyring==10.6.0
+keyrings.alt==3.0
+kiwisolver==1.1.0
+language-selector==0.1
+lazy-object-proxy==1.4.3
+llvmlite==0.31.0
+locket==0.2.0
+MarkupSafe==1.1.1
+matplotlib==3.1.3
+mccabe==0.6.1
+mistune==0.8.4
+mock==4.0.2
+more-itertools==8.4.0
+mpmath==1.1.0
+msgpack==1.0.0
+multidict==4.7.6
+multipledispatch==0.6.0
+nbclassic==0.2.6
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.1.2
+nbresuse==0.3.3
+nest-asyncio==1.4.3
+netifaces==0.10.4
+networkx==2.4
+notebook==6.2.0
+numba==0.48.0
+numpy==1.19.5
+olefile==0.45.1
+packaging==20.8
+pamqp==2.3.0
+pandas==1.0.1
+pandocfilters==1.4.3
+param==1.9.3
+parso==0.8.1
+partd==1.1.0
+patsy==0.5.1
+pexpect==4.8.0
+pickleshare==0.7.5
+pika==1.1.0
+Pillow==7.0.0
+plotly==4.5.2
 pluggy==0.13.1
-ply==3.11
-psutil==5.8.0
-py==1.10.0
-pybind11==2.6.2
+plyvel==1.2.0
+prometheus-client==0.9.0
+prompt-toolkit==3.0.10
+protobuf==3.7.0
+psutil==5.7.0
+ptyprocess==0.7.0
+py==1.9.0
+py-solc-x==1.0.0
+pyarmor==5.9.3
+pycairo==1.16.2
 pycparser==2.20
+pycrypto==2.6.1
+pycryptodome==3.9.8
+pyct==0.4.6
+pycups==1.9.73
+Pygments==2.7.4
+pygobject==3.26.1
+pylint==2.4.4
 pyparsing==2.4.7
 pyrsistent==0.17.3
-pytest==6.2.4
-python-constraint==1.4.0
+pytest==5.4.3
+pytest-asyncio==0.14.0
+pytest-mock==3.2.0
+python-apt==1.6.5+ubuntu0.5
 python-dateutil==2.8.1
-pytz==2021.1
-qiskit==0.26.2
-qiskit-aer==0.8.2
-qiskit-aqua==0.9.1
-qiskit-ibmq-provider==0.13.1
-qiskit-ignis==0.6.0
-qiskit-terra==0.17.4
-Quandl==3.6.0
+python-debian==0.1.32
+pytz==2020.5
+pyviz-comms==0.7.4
+PyWavelets==1.1.1
+pyxdg==0.25
+PyYAML==5.3.1
+pyzmq==21.0.1
+reportlab==3.4.0
 requests==2.25.1
-requests-ntlm==1.1.0
-retworkx==0.8.0
-scikit-learn==0.24.1
-scipy==1.6.1
-six==1.16.0
-sympy==1.7.1
-threadpoolctl==2.1.0
-toml==0.10.2
-typing-extensions==3.10.0.0
-urllib3==1.26.5
-websockets==9.1
-Werkzeug==2.0.1
-yfinance==0.1.55
-zipp==3.4.1
+requests-unixsocket==0.1.5
+retrying==1.3.3
+sanic==18.12.0
+Sanic-Cors==0.9.6
+Sanic-Plugins-Framework==0.9.3
+scikit-image==0.16.2
+scikit-learn==0.22.1
+scipy==1.5.4
+seaborn==0.10.0
+secp256k1==0.13.2
+SecretStorage==2.3.1
+semantic-version==2.8.5
+Send2Trash==1.5.0
+setproctitle==1.1.10
+six==1.15.0
+sniffio==1.2.0
+solc-select==0.2.0
+sortedcontainers==2.1.0
+SQLAlchemy==1.3.13
+statsmodels==0.11.1
+sympy==1.5.1
+systemd-python==234
+tbears==1.6.4
+tblib==1.6.0
+terminado==0.9.2
+testpath==0.4.4
+toolz==0.10.0
+tornado==6.1
+tqdm==4.43.0
+traitlets==4.3.3
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+ubuntu-advantage-tools==27.0
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+ujson==3.0.0
+unattended-upgrades==0.1
+urllib3==1.26.2
+uvloop==0.14.0
+wcwidth==0.2.5
+webencodings==0.5.1
+websockets==6.0
+widgetsnbextension==3.5.1
+wrapt==1.11.2
+xarray==0.15.0
+xkit==0.0.0
+yarl==1.4.2
+zict==2.0.0
+zipp==3.4.0
